<resources>
    <string name="app_name">meajudaveterano</string>
    <string name="entrar">Entrar</string>
    <string name="signIn">Não possui uma conta? Crie aqui!</string>
    <string name="criarConta">Não possui uma conta? Crie aqui!</string>
    <string name="infoSenha">Informe sua senha</string>
    <string name="infoEmail">Informe seu e-mail</string>
    <string name="infoNome">Informe seu nome</string>
    <string name="infoSobrenome">Informe seu sobrenome</string>
    <string name="infoCurso">Informe seu curso</string>
    <string name="infoCollege">Informe sua instituição</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="foto">Foto</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="perfil">Perfil</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_mensagens">Mensagens</string>
    <string name="exit">Sair</string>
    <string name="edit">Editar</string>
    <string name="load">Carregar</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search Me</string>
    <string name="search">Search</string>
    <string name="title_activity_pesquisa">Pesquisa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="infoTelefone">Informe seu telefone</string>
</resources>
