<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SigninActivity">

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/infoNome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectedPhoto" />

<EditText
    android:id="@+id/editEmail"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/infoEmail"
    android:inputType="textEmailAddress"
    app:layout_constraintEnd_toEndOf="@+id/editUserName"
    app:layout_constraintStart_toStartOf="@+id/editUserName"
    app:layout_constraintTop_toBottomOf="@+id/editUserName" />

<EditText
    android:id="@+id/editPassword"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:ems="10"
    android:hint="@string/infoSenha"
    android:inputType="textPassword"
    app:layout_constraintEnd_toEndOf="@+id/editEmail"
    app:layout_constraintStart_toStartOf="@+id/editEmail"
    app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/cadastrar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTelefone"
        app:layout_constraintStart_toStartOf="@+id/editTelefone"
        app:layout_constraintTop_toBottomOf="@+id/editTelefone" />

    <Button
        android:id="@+id/buttonSelectedPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_button_img_rounded"
        android:text="@string/foto"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewFoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSelectedPhoto"
        app:layout_constraintEnd_toEndOf="@+id/buttonSelectedPhoto"
        app:layout_constraintStart_toStartOf="@+id/buttonSelectedPhoto"
        app:layout_constraintTop_toTopOf="@+id/buttonSelectedPhoto"
        />

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/infoTelefone"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />


</android.support.constraint.ConstraintLayout>